fix bug on mobile buttons

--- a/src/App.css
+++ b/src/App.css
@@ -485,7 +485,7 @@
   }
   .downloadBtn {
     width: 145px;
-    font-size: 13px;
+    font-size: 12px;
   }
   .downloadBtnHolder {
     width: 145px;
